--- a/m-step-ahead-predictions.html
+++ b/m-step-ahead-predictions.html
@@ -389,10 +389,11 @@ for (i in N:(L + 1)) {
   fit_i &lt;- update(fit, newdata = df[-(i:to), ], recompile = FALSE, chains = 1)
   loglik[, i] &lt;- log_lik(fit_i, newdata = df[1:i, ])[, i]
 }</code></pre>
-<p>Comparing the exact block-1-SAP to the exact 1-SAP reveals substantial difference demonstrating that the assumption about distant future values containing no additional information is probably not justified in the present case.</p>
+<p>Comparing the exact block-1-SAP to the exact 1-SAP reveals a substantial difference.</p>
 <pre class="r"><code>exact_elpds_1sap_block &lt;- apply(loglik, 2, log_mean_exp)
 (exact_elpd_1sap_block &lt;- sum(exact_elpds_1sap_block, na.rm = TRUE))</code></pre>
 <pre><code>[1] -91.01868</code></pre>
+<p>This does, however, not necessarily imply that observations depend on distant future values. Rather, the reason could be that the model parameters were estimated more precisely in the block-1-SAP as more data are available in particular for computing 1-SAP of observations early in the time-series. If so, we would expect the differences between pointwise elpds of block-1-SAP and 1-SAP to be larger for earlier observations. And indeed, this is what we see when plotting the differences.</p>
 <pre class="r"><code>dat_elpd &lt;- data.frame(
   elpd_diff = exact_elpds_1sap_block - exact_elpds_1sap,
   i = seq_along(exact_elpds_1sap_block)
